# eco-features-experiment

Eco-Feature/: CMakeLists.txt  Makefile  createfile  eco-features.sublime-project  eco-features.sublime-workspace
Eco-Feature/hdr/: AdaBoost.hpp  Classifier.hpp  Creature.hpp  GA.hpp  Perceptron.hpp  Subregion.hpp  Transform.hpp  main.hpp  typedefs.hpp
Eco-Feature/include/: AdaBoost.hpp  Creature.hpp  DataList.hpp  Feature.hpp  GA.hpp  Image.hpp  Perceptron.hpp  Subregion.hpp  Transform.hpp  main.hpp
Eco-Feature/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
Eco-Feature/nbproject/private/: private.xml
Eco-Feature/src/: AdaBoost.cpp  Classifier.cpp  Creature.cpp  DataList.cpp  Feature.cpp  GA.cpp  Image.cpp  Perceptron.cpp  Subregion.cpp  Transform.cpp  TransformFunctions.cpp  main.cpp
Eco-Feature/src/include/: Creature.hpp  GA.hpp  Perceptron.hpp  Transform.hpp
